[Ramki] Use latest event banners

--- a/src/edition/index.scss
+++ b/src/edition/index.scss
@@ -89,6 +89,11 @@
   background-image: url("../imgs/event-bg-3.png");
 }
 
+.event-bg-4 {
+  background-size: cover;
+  background-image: url("../imgs/event-bg-4.png");
+}
+
 .editionDetails {
   margin: 1.5vmax;
   .basicInfo {
