[Ramki] Change base green color

--- a/src/edition/index.scss
+++ b/src/edition/index.scss
@@ -226,7 +226,7 @@
           font-size: 1vmax;
           display: inline-block;
           color: white;
-          background-color: #11aa58;
+          background-color: #008731;
           border-radius: 4px;
           text-decoration: none;
           border: none;
