--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -171,7 +171,7 @@
       margin-top: 2vmax;
       margin-bottom: 4vmax;
       .link {
-        color: #11aa58;
+        color: #008731;
         font-weight: 600;
         background-color: white;
         border-radius: 0.3vmax;
