--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -119,6 +119,10 @@
       display: inline-block;
       width: 75%;
 
+      @media only screen and (max-width: 768px) {
+        width: 95%;
+      }
+
       .summary {
         font-weight: 600;
       }
