[Ramki] Fix minor UI design issues

--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -200,6 +200,7 @@
     background-image: url("../imgs/instagram.svg");
   }
   .twitter {
+    margin-left: 2px;
     background-image: url("../imgs/twitter.svg");
   }
   .linkedin {
@@ -210,9 +211,7 @@
     background-image: url("../imgs/youtube.svg");
   }
   .meetup {
-    width: 3.5vmax !important;
-    height: 3.5vmax !important;
-    background-image: url("../imgs/meetup.png");
+    background-image: url("../imgs/meetup.svg");
   }
 
   .copyright {
