--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -89,10 +89,10 @@
 
 #banner.active {
   padding-bottom: 1vmax;
-  background-image: url("../../imgs/abstract-bg.png");
+  background-image: url("../../imgs/new banner.png");
 
   @media only screen and (min-width: 1440px) {
-    background-image: url("../../imgs/abstract-bg-2x.png");
+    background-image: url("../../imgs/new banner.png");
   }
 
   .upcomingEditionInfo.small {
@@ -171,7 +171,7 @@
       display: inline-block;
 
       .link {
-        color: #008731;
+        color: #6b9e78;
         font-weight: 600;
         background-color: white;
         border-radius: 0.3vmax;
@@ -182,7 +182,7 @@
 
     .talks {
       width: 60%;
-      background: rgba(17, 170, 88, 0.5) 0% 0% no-repeat padding-box;
+      background: rgb(237, 241, 243);
       border-radius: 6px;
       padding: 1vmax;
       margin-top: 2vmax;
@@ -195,6 +195,7 @@
         display: inline-block;
         vertical-align: top;
         width: 60%;
+        color: #000000;
 
         @media only screen and (max-width: 1024px) {
           width: 85%;
@@ -220,6 +221,7 @@
       .speakerInfo {
         padding-left: 1vmax;
         display: inline-block;
+        color: #000000;
 
         .pic {
           @media only screen and (max-width: 1024px) {
@@ -261,6 +263,7 @@
           padding-left: 1vmax;
           vertical-align: top;
           display: inline-block;
+          color: #000000;
         }
       }
 
@@ -297,10 +300,12 @@
 
       .bold {
         font-weight: 600;
+        color: #000000;
       }
 
       .light {
         font-weight: 100;
+        color: #000000;
       }
     }
   }
