--- a/src/app.scss
+++ b/src/app.scss
@@ -7,7 +7,7 @@ $green-color: #008731;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 1vmax;
 }
 
