--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -1,5 +1,5 @@
 #banner {
-  color: white;
+  color: black;
   object-fit: cover;
   background-repeat: no-repeat;
 
@@ -9,20 +9,23 @@
     overflow: hidden;
 
     .item {
-      color: #f2f2f2;
-      float: right;
+      color: black;
       text-align: center;
       padding-left: 1em;
       padding-right: 1em;
       text-decoration: none;
-      opacity: 1;
+      vertical-align: -webkit-baseline-middle;
+    }
+
+    .item:hover {
+      color: #bd4257;
     }
 
     .item.logo {
       float: left;
       font-size: 1.5vmax;
       font-weight: 800;
-      padding-left: 10px;
+      padding-left: 20px;
       padding-right: 6px;
     }
 
@@ -72,7 +75,7 @@
       justify-content: center;
       text-align: center;
       letter-spacing: 0px;
-      background: rgba(0, 0, 0, 0.4) 0% 0% no-repeat padding-box;
+      background: rgba(71, 161, 173, 0.4) 0% 0% no-repeat padding-box;
       border: 0.05em solid white;
       border-radius: 0.3em;
       width: 5em;
@@ -89,15 +92,11 @@
 
 #banner.active {
   padding-bottom: 1vmax;
-  background-image: url("../../imgs/abstract-bg.png");
-
-  @media only screen and (min-width: 1440px) {
-    background-image: url("../../imgs/abstract-bg-2x.png");
-  }
+  background-image: url("../../imgs/abstract-bg.jpg");
+  background-size: cover;
 
   .upcomingEditionInfo.small {
-    margin-top: 1vmax;
-    margin-left: 0;
+    margin: 1vmax;
     padding-left: 10px;
     .basicInfo {
       .title {
@@ -117,10 +116,9 @@
 
     .basicInfo {
       display: inline-block;
-      width: 75%;
 
       @media only screen and (max-width: 768px) {
-        width: 95%;
+        width: 75%;
       }
 
       .summary {
@@ -147,7 +145,7 @@
         justify-content: center;
         text-align: center;
         letter-spacing: 0px;
-        background: rgba(0, 0, 0, 0.4) 0% 0% no-repeat padding-box;
+        background: rgba(71, 161, 173, 0.4) 0% 0% no-repeat padding-box;
         border: 0.05em solid white;
         border-radius: 0.3em;
         width: 4em;
@@ -166,14 +164,14 @@
     }
 
     .rsvp {
-      padding-top: 2vmax;
-      vertical-align: top;
+      vertical-align: super;
       display: inline-block;
+      margin-left: 2%;
 
       .link {
-        color: #008731;
+        color: white;
         font-weight: 600;
-        background-color: white;
+        background-color: #bd4257;
         border-radius: 0.3vmax;
         padding: 0.75vmax 1.5vmax;
         text-decoration: none;
@@ -182,7 +180,7 @@
 
     .talks {
       width: 60%;
-      background: rgba(17, 170, 88, 0.5) 0% 0% no-repeat padding-box;
+      background: rgba(71, 171, 163, 0.5) 0% 0% no-repeat padding-box;
       border-radius: 6px;
       padding: 1vmax;
       margin-top: 2vmax;
